css/templatestyles.css
/* ... */
/* .card-container{padding:0 20px} */
.card-container{padding:0 20px}
/* .card{border:1px solid #ccc} */

.card-img{width:100%}

.text-box{opacity:0;transition:transform 1s,opacity 1s;transform:translateY(200px)}
.text-box.slide-up{transform:translateY(0);opacity:1}


.towns-list{display:grid;grid-template-columns:repeat(2,1fr);gap:0;list-style-type:none;padding:0}
.pin{color:#bc5a15;padding-right:3px}
.pin2{color:#853903;padding-right:3px}


.checkmark{display:inline-block;width:20px;height:20px;position:relative;margin-right:0}.checkmark::before{content:"";position:absolute;width:11px;height:19px;border:solid #4CAF50;border-width:0 3px 3px 0;transform:rotate(43deg);border-radius:2px}

.arrow-container{display:inline-block;width:20px}
.arrow{background-color:#bc5a15;display:inline-block;position:relative;width:100%;height:1.5px;top:-4px}
.arrow::before{top:1.5px;transform:rotate(-45deg)}
.arrow::after{top:-1.5px;transform:rotate(45deg)}
.arrow::after,.arrow::before{background-color:#bc5a15;content:'';position:absolute;width:28%;height:1.5px;right:-2px}


/* .pin{background-color:#bc5a15;border-radius:50%;height:10px;width:10px;position:relative;top:2px} */
/* .pin::before{content:'';position:absolute;width:1px;height:100%;background-color:#bc5a15;left:50%;top:0}   */

.footer{background-color:#303f5e;color:#ccc}
.f1{max-width:1320px;margin:auto;}
.fcontainer{display: inline-block;}
.fmoto{width: 220px;}
.fheadline {border-bottom: 2px solid #bc5a15;display:inline-block;}
.footer-links a{color:#ccc;text-decoration:none;display:inline-block;padding:5px 0}
.footer-links a:hover{text-decoration:underline; text-underline-offset: 2px;}
.fsociallink{margin-right:10px}
.fimg{width:inherit;display:inline-block}

.greater-than{border:solid #fff;border-width:0 1px 1px 0;display:inline-block;padding:3px;margin-right:9px;margin-bottom:1px;transform:rotate(-45deg);-webkit-transform:rotate(-45deg)}

.copyright{background-color:#25304b}

/* .align-items-center {
  align-items: center !important; 
} */
.d-flex{display:flex!important}
.flex-wrap-wrap{flex-wrap:wrap!important}
.justify-content-center{justify-content:center!important}

.m-0{margin:0!important}.m-1{margin:.25rem!important}.m-2{margin:.5rem!important}.m-3{margin:1rem!important}.m-4{margin:1.5rem!important}.m-5{margin:3rem!important}.m-auto{margin:auto!important}.mx-0{margin-right:0!important;margin-left:0!important}.mx-1{margin-right:.25rem!important;margin-left:.25rem!important}.mx-2{margin-right:.5rem!important;margin-left:.5rem!important}.mx-3{margin-right:1rem!important;margin-left:1rem!important}.mx-4{margin-right:1.5rem!important;margin-left:1.5rem!important}.mx-5{margin-right:3rem!important;margin-left:3rem!important}.mx-auto{margin-right:auto!important;margin-left:auto!important}.my-0{margin-top:0!important;margin-bottom:0!important}.my-1{margin-top:.25rem!important;margin-bottom:.25rem!important}.my-2{margin-top:.5rem!important;margin-bottom:.5rem!important}.my-3{margin-top:1rem!important;margin-bottom:1rem!important}.my-4{margin-top:1.5rem!important;margin-bottom:1.5rem!important}.my-5{margin-top:3rem!important;margin-bottom:3rem!important}.my-auto{margin-top:auto!important;margin-bottom:auto!important}.mt-0{margin-top:0!important}.mt-1{margin-top:.25rem!important}.mt-2{margin-top:.5rem!important}.mt-3{margin-top:1rem!important}.mt-4{margin-top:1.5rem!important}.mt-5{margin-top:3rem!important}.mt-auto{margin-top:auto!important}.me-0{margin-right:0!important}.me-1{margin-right:.25rem!important}.me-2{margin-right:.5rem!important}.me-3{margin-right:1rem!important}.me-4{margin-right:1.5rem!important}.me-5{margin-right:3rem!important}.me-auto{margin-right:auto!important}.mb-0{margin-bottom:0!important}.mb-1{margin-bottom:.25rem!important}.mb-2{margin-bottom:.5rem!important}.mb-3{margin-bottom:1rem!important}.mb-4{margin-bottom:1.5rem!important}.mb-5{margin-bottom:3rem!important}.mb-auto{margin-bottom:auto!important}.ms-0{margin-left:0!important}.ms-1{margin-left:.25rem!important}.ms-2{margin-left:.5rem!important}.ms-3{margin-left:1rem!important}.ms-4{margin-left:1.5rem!important}.ms-5{margin-left:3rem!important}.ms-auto{margin-left:auto!important}
.p-0{padding:0!important}.p-1{padding:.25rem!important}.p-2{padding:.5rem!important}.p-3{padding:1rem!important}.p-4{padding:1.5rem!important}.p-5{padding:3rem!important}.px-0{padding-right:0!important;padding-left:0!important}.px-1{padding-right:.25rem!important;padding-left:.25rem!important}.px-2{padding-right:.5rem!important;padding-left:.5rem!important}.px-3{padding-right:1rem!important;padding-left:1rem!important}.px-4{padding-right:1.5rem!important;padding-left:1.5rem!important}.px-5{padding-right:3rem!important;padding-left:3rem!important}.py-0{padding-top:0!important;padding-bottom:0!important}.py-1{padding-top:.25rem!important;padding-bottom:.25rem!important}.py-2{padding-top:.5rem!important;padding-bottom:.5rem!important}.py-3{padding-top:1rem!important;padding-bottom:1rem!important}.py-4{padding-top:1.5rem!important;padding-bottom:1.5rem!important}.py-5{padding-top:3rem!important;padding-bottom:3rem!important}.pt-0{padding-top:0!important}.pt-1{padding-top:.25rem!important}.pt-2{padding-top:.5rem!important}.pt-3{padding-top:1rem!important}.pt-4{padding-top:1.5rem!important}.pt-5{padding-top:3rem!important}.pe-0{padding-right:0!important}.pe-1{padding-right:.25rem!important}.pe-2{padding-right:.5rem!important}.pe-3{padding-right:1rem!important}.pe-4{padding-right:1.5rem!important}.pe-5{padding-right:3rem!important}.pb-0{padding-bottom:0!important}.pb-1{padding-bottom:.25rem!important}.pb-2{padding-bottom:.5rem!important}.pb-3{padding-bottom:1rem!important}.pb-4{padding-bottom:1.5rem!important}.pb-5{padding-bottom:3rem!important}.ps-0{padding-left:0!important}.ps-1{padding-left:.25rem!important}.ps-2{padding-left:.5rem!important}.ps-3{padding-left:1rem!important}.ps-4{padding-left:1.5rem!important}.ps-5{padding-left:3rem!important}
/* ... */

